fixing h1 padding on mobile

--- a/style.css
+++ b/style.css
@@ -645,6 +645,7 @@ text-align: center;
 
 h1 {
 	font-size: 3em !important;
+	padding:80px 0px 10px !important;
 }
 
 .header li {
